Fix whitespace and alignment issues in party inventory

--- a/src/styles/actor/party/_index.scss
+++ b/src/styles/actor/party/_index.scss
@@ -1,4 +1,6 @@
 .sheet.party {
+    --color-border: rgba(0, 0, 0, 0.28);
+
     form {
         display: flex;
         flex-direction: column;
@@ -170,7 +172,7 @@
         }
 
         .box {
-            border: 1px solid rgba(0, 0, 0, 0.28);
+            border: 1px solid var(--color-border);
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
             font-family: var(--sans-serif);
             border-radius: 3px;
@@ -222,7 +224,7 @@
             footer {
                 background-color: var(--bg-dark);
                 border-radius: 0 0 3px 3px;
-                border: 1px solid rgba(0, 0, 0, 0.28);
+                border: 1px solid var(--color-border);
                 border-top: none;
                 color: var(--sub);
                 font-weight: 500;
