--- a/src/styles/actor/party/_overview.scss
+++ b/src/styles/actor/party/_overview.scss
@@ -151,7 +151,7 @@
         margin-bottom: 0.25rem;
 
         & > div {
-            border: 1px solid rgba(0, 0, 0, 0.28);
+            border: 1px solid var(--color-border);
             border-radius: 2px;
             height: 2.6rem;
             display: flex;
